--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     }
   </style>
   <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
